; ModuleID = '/home/carl/AnghaBench/esp-idf/components/driver/esp32s2beta/extr_rtc_touchpad.c_touch_pad_set_group_mask.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/driver/esp32s2beta/extr_rtc_touchpad.c_touch_pad_set_group_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { %struct.TYPE_5__ }
%struct.TYPE_5__ = type { i32 }
%struct.TYPE_7__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i32 }

@TOUCH_PAD_BIT_MASK_MAX = common dso_local global i32 0, align 4
@RTCCNTL = common dso_local global %struct.TYPE_8__ zeroinitializer, align 4
@SENS = common dso_local global %struct.TYPE_7__ zeroinitializer, align 4
@ESP_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @touch_pad_set_group_mask(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i32 (...) @RTC_TOUCH_ENTER_CRITICAL()
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @TOUCH_PAD_BIT_MASK_MAX, align 4
  %6 = and i32 %4, %5
  %7 = load i32, i32* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @RTCCNTL, i32 0, i32 0, i32 0), align 4
  %8 = or i32 %7, %6
  store i32 %8, i32* getelementptr inbounds (%struct.TYPE_8__, %struct.TYPE_8__* @RTCCNTL, i32 0, i32 0, i32 0), align 4
  %9 = load i32, i32* %2, align 4
  %10 = load i32, i32* @TOUCH_PAD_BIT_MASK_MAX, align 4
  %11 = and i32 %9, %10
  %12 = load i32, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @SENS, i32 0, i32 0, i32 0), align 4
  %13 = or i32 %12, %11
  store i32 %13, i32* getelementptr inbounds (%struct.TYPE_7__, %struct.TYPE_7__* @SENS, i32 0, i32 0, i32 0), align 4
  %14 = call i32 (...) @RTC_TOUCH_EXIT_CRITICAL()
  %15 = load i32, i32* @ESP_OK, align 4
  ret i32 %15
}

declare dso_local i32 @RTC_TOUCH_ENTER_CRITICAL(...) #1

declare dso_local i32 @RTC_TOUCH_EXIT_CRITICAL(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
